Entrega 6 - Mi perfil READY (falta chequear telefono válido), nuevo(Añadir img), falta responsive design en product.html

--- a/my-profile.html
+++ b/my-profile.html
@@ -72,6 +72,7 @@
         </div>
       </div>
       <form>
+        <input type="file" id="input_img" onchange="cambioArchivo()" accept="image/*">
         <div class="form-row pt-3">
           <div class="form-group col-md-2">
             <label for="nombre">Nombre</label>
@@ -123,6 +124,7 @@
   <script src="js/google.js"></script>
   <script src="js/facebook.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/cleave.js/1.6.0/cleave.min.js"></script>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="js/cleave-phone.uy.js"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js"></script>
   <script src="https://apis.google.com/js/platform.js?onload=onLoad" async defer></script>
