--- a/products.html
+++ b/products.html
@@ -16,6 +16,14 @@
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
+    <style>
+      .card {
+        box-shadow: 1px 8px 20px rgba(0, 0, 0, 0.1);
+      }
+      .card:hover {
+        box-shadow: 1px 8px 20px rgba(0, 0, 0, 0.4);
+      }
+    </style>
   </head>
   <body>
     <nav class="site-header sticky-top py-1 bg-dark">
@@ -100,12 +108,12 @@
                 </div>
               </div>
           </div>
-      <div class="container p-4">
-            <div class="row">
-                <div class="list-group" id="cat-list-container">
-                </div>
-            </div>
+      <div class="album py-5">
+        <div class="container">
+              <div id="cat-list-container" class="row">
+              </div>
         </div>
+      </div>
     </main>
     <footer class="text-muted bg-light">
       <div class="container">
