Add zoom - product-info

--- a/product-info.html
+++ b/product-info.html
@@ -143,6 +143,7 @@
   <script src="js/google.js"></script>
   <script src="js/facebook.js"></script>
   <script src="https://unpkg.com/material-components-web@latest/dist/material-components-web.min.js"></script>
+  <script src="js/jquery.zoom.js" charset="utf-8"></script>
   <script src="js/moment.js"></script>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_LA/sdk.js"></script>
