--- a/cart.html
+++ b/cart.html
@@ -99,22 +99,31 @@
       <div class="row pt-5">
         <div class="col">
             <h3>Envío</h3>
-            <form id="form-envio" class="pl-2">
+            <form id="form-envio" class="pl-2 needs-validation" novalidate>
               <div class="form-group">
                 <label for="calle">Calle</label>
-                <input id="calle" type="text" class="form-control w-50 envioForms" aria-describedby="calle">
+                <input id="calle" type="text" class="form-control w-50 envioForms" aria-describedby="calle" required>
+                <div class="invalid-feedback">
+                  Ingrese una calle válida
+                </div>
               </div>
               <div class="form-group">
                 <label for="nPuerta">Número de puerta</label>
-                <input id="nPuerta" type="number" class="form-control w-25 envioForms" aria-describedby="nPuerta">
+                <input id="nPuerta" type="number" class="form-control w-25 envioForms" aria-describedby="nPuerta" required>
+                <div class="invalid-feedback">
+                  Ingrese un número de puerta válido
+                </div>
               </div>
               <div class="form-group">
                 <label for="esquina">Esquina</label>
-                <input id="esquina" type="text" class="form-control w-50 envioForms" aria-describedby="esquina">
+                <input id="esquina" type="text" class="form-control w-50 envioForms" aria-describedby="esquina" required>
+                <div class="invalid-feedback">
+                  Ingrse una calle válida
+                </div>
               </div>
               <div class="form-group">
                 <label for="pais">País</label>
-                <select id="pais" class="form-control w-25">
+                <select id="pais" class="form-control w-50" required>
                 </select>
               </div>
             </form>
@@ -144,8 +153,31 @@
           </div>
         </div>
     </div>
-    <div class="pt-5">
-      <button id="btnMetodoPago" class="btn btn-outline-secondary" data-toggle="modal" data-target="#formPagoModal">Elegir método de pago</button>
+
+    <h3 class="pt-4">Costos</h3>
+    <ul class="list-group mb-3">
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Subtotal</h6>
+            <small class="text-muted">Unitario de los productos</small>
+          </div>
+          <span class="text-muted" id="productCostText">-</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between lh-condensed">
+          <div>
+            <h6 class="my-0">Tipo de envío</h6>
+            <small class="text-muted">Según el tipo de envío</small>
+          </div>
+          <span class="text-muted" id="envioText">-</span>
+        </li>
+        <li class="list-group-item d-flex justify-content-between">
+          <span id="spanTotal">Total ($)</span>
+          <strong id="totalCostText">-</strong>
+        </li>
+      </ul>
+    <h3 class="pt-2">Método de pago</h3>
+    <div class="pt-2">
+      <button id="btnMetodoPago" class="btn btn-outline-dark" data-toggle="modal" data-target="#formPagoModal">Seleccionar método de pago</button>
     </div>
 
     <div class="modal fade" id="formPagoModal" tabindex="-1" role="dialog" aria-labelledby="formPagoModal" aria-hidden="true">
@@ -225,30 +257,8 @@
         </div>
       </div>
     </div>
-
-    <h3 class="pt-4">Costos</h3>
-    <ul class="list-group mb-3">
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Subtotal</h6>
-            <small class="text-muted">Unitario de los productos</small>
-          </div>
-          <span class="text-muted" id="productCostText">-</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between lh-condensed">
-          <div>
-            <h6 class="my-0">Tipo de envío</h6>
-            <small class="text-muted">Según el tipo de envío</small>
-          </div>
-          <span class="text-muted" id="envioText">-</span>
-        </li>
-        <li class="list-group-item d-flex justify-content-between">
-          <span id="spanTotal">Total ($)</span>
-          <strong id="totalCostText">-</strong>
-        </li>
-      </ul>
-    <hr class="mb-4">
-    <button class="btn btn-primary btn-lg" onclick="comprar()">Comprar</button>
+    <hr class="my-4">
+    <button class="btn btn-primary btn-lg" type="submit" form="form-envio">Comprar</button>
   </div>
   <div id="spinner-wrapper">
     <div class="lds-ring">
